--- a/works.html
+++ b/works.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+		<!-- fancy box -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.6/dist/jquery.fancybox.min.css" />
+		<!-- font awesome -->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 		<title>Works</title>
 	</head>
 	<body style="background-color: #f5f4f3;">
@@ -15,8 +18,14 @@
 				text-align: justify;
 			}
 		</style>
-		<div class="text-center bg-dark pt-2 pb-2 mb-5 text-white" >
-			<h1>Stanley 的作品集</h1>
+		<div class="d-flex justify-content-center bg-dark pt-2 pb-2 mb-5 text-white" >
+			<h1 class="p-2 mr-2">Stanley 的作品集</h1>
+         <a href="https://github.com/stanleychu2" class="text-white p-2 align-self-center">
+         	<i class="fab fa-github" style="font-size: 25px;"></i>
+         </a>
+        	<a href="https://www.linkedin.com/in/斯-邱-9a9a8115b/" class="text-white p-2 align-self-center">
+        		<i class="fab fa-linkedin" style="font-size: 25px;"></i>
+        	</a>
 		</div>
 		<div class="container">
 			<div class="card-deck">
@@ -137,11 +146,11 @@
 				</div>
 			</div>
 		</div>
-		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		<!-- fancy box -->
 		<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.6/dist/jquery.fancybox.min.js"></script>
 	</body>
 	<hr>
