--- a/works.html
+++ b/works.html
@@ -101,7 +101,6 @@
 						<h5 class="card-title">課程查詢</h5>
 						<p class="card-text">下載校方提供之課程資訊，並將之轉換為特定的格式之後輸入給 Elasticsearch，讓他替我們執行搜尋、排序、過濾、加總，關鍵字查詢則是對全欄位的搜尋可以在此鍵入老師姓名或是開課單位等校方有提供的資料，而排序方式則以科目代碼為預設值</p>
 					</div>
-				</div>
 			</div>
 			<div class="card-deck mt-4">
 				<div class="card">
@@ -135,16 +134,14 @@
 						<p class="card-text">參考現實房間的圖片，按照配置試著用 Maya 建模建出一個相似的房間，接著在上材質跟燈光</p>
 					</div>
 				</div>
-				<div class="card invisible">
-<!-- 					<a href="./img/elevator.png" data-fancybox="images" data-width="2048" data-height="1365">
-						<img src="./img/elevator.png" class="card-img-top" alt="公車首頁" width="348" height="260">
-					</a> -->
+				<div class="card">
+					<a href="./img/impression_1.jpg" data-fancybox="images" data-width="2048" data-height="1365">
+						<img src="./img/impression_1.jpg" class="card-img-top" alt="Logo" width="348" height="260">
+					</a>
+					<a href="./img/impression_2.jpg" data-fancybox="images" data-width="2048" data-height="1365"></a>
 					<div class="card-body d-flex flex-column">
-						<h5 class="card-title">待新增</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-						<div class="text-center mt-auto">
-							<a href="https://drive.google.com/file/d/17i1jN1ROpW4JC4mr9RmPGsKjokdComJF/view" class="btn btn-md btn-warning text-white">See More</a>
-						</div>
+						<h5 class="card-title">Impression</h5>
+						<p class="card-text">我們的理念是，希望使用者換一個方式呈現自己，因為在社會當中，往往受制於別人給的印象框架，我們希望使用者能打破既定印象，重新用印章蓋出自己的臉，Node.js 和 NodeMCU 為主要技術</p>
 					</div>
 				</div>
 			</div>
